--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,7 @@ main{
 }
 hr{
     border: 1px solid #d1d1d1;
+    margin-bottom: 27px;
 }
 
 /* top  players style */
@@ -46,4 +47,35 @@ hr{
 .player-name{
     margin-left: 16px;
     font-size: 18px;
+}
+
+/* top blogs styles */
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 26px;
+}
+.blog{
+    display: flex;
+}
+.blog .thumbnail img{
+    width: 177px;
+    height: 117px;
+}
+.blog-info{
+    margin-left: 16px;
+}
+.blog-title{
+    font-size: 20px;
+    margin: 0;
+}
+.author{
+    color: #9f9f9f;
+    font-size: 16px;
+    margin-top: 3px;
+}
+.author a{
+    text-decoration: none;
+    color: #562eff;
+
 }
