--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,9 @@ main{
     margin-top: 21px;
     border-radius: 5px;
 }
+.last{
+    margin-bottom: 21px; 
+}
 hr{
     border: 1px solid #d1d1d1;
     margin-bottom: 27px;
@@ -142,4 +145,20 @@ hr{
     padding-left: 10px;
     padding-right: 10px;
     border-radius: 15px;
+}
+
+/* media queries */
+/* mobile devices */
+@media only screen and (max-width:688px){
+    .container{
+        width: 100%;
+    }
+    .players, .blogs, .courses{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .player, .blog, .course{
+        flex-direction: column;
+        align-items: center;
+    }
+    
 }
