--- a/styles/style.css
+++ b/styles/style.css
@@ -153,12 +153,15 @@ hr{
     .container{
         width: 100%;
     }
+    .section-title{
+        text-align: center;
+    }
     .players, .blogs, .courses{
         grid-template-columns: repeat(1, 1fr);
     }
-    .player, .blog, .course{
-        flex-direction: column;
-        align-items: center;
+    .courses{
+        grid-template-columns: repeat(1,1fr);
+        grid-row-gap: 24px;
+        justify-content: center;
     }
-    
 }
