--- a/styles/style.css
+++ b/styles/style.css
@@ -160,8 +160,9 @@ hr{
         grid-template-columns: repeat(1, 1fr);
     }
     .courses{
-        grid-template-columns: repeat(1,1fr);
         grid-row-gap: 24px;
-        justify-content: center;
+    }
+    .course{
+        margin: auto;
     }
 }
